# linear-algebra-testcase

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  tests.sh
linear-algebra-testcase/: controller.py  coordinate_system.py  main.py
linear-algebra-testcase/user_interface/: window.py
linear_algebra_testcase/: controller.py  coordinate_system.py  elements.py  main.py  matrices.py  render.py
linear_algebra_testcase/common/: elements_core.py
linear_algebra_testcase/common/user_interface/: __init__.py  items.py  window.py
linear_algebra_testcase/common/utils/: __init__.py
linear_algebra_testcase/dim2/: __main__.py  controller.py  coordinate_system.py  elements.py  render.py
linear_algebra_testcase/dim2/user_interface/: __init__.py  items.py  window.py
linear_algebra_testcase/dim3/: __main__.py  controller.py  coordinate_system.py  elements.py  render.py
linear_algebra_testcase/user_interface/: __init__.py  items.py  window.py
linear_algebra_testcase/utils/: __init__.py
linear_algebra_testcase/utils/user_interface/: __init__.py  items.py
src/: controller.py  coordinate_system.py  element_buffer.py  elements.py  main.py  matrices.py  misc.py  render.py  user_interface.py  utils.py
src/user_interface/: __init__.py  items.py
