[tool.poetry]
name = "linear-algebra-testcase"
version = "0.1.0"
description = "A small utility program in Python (pygame + numpy) to visualize concepts of linear transformations."
authors = ["Bluemi <bruno.schilling@protonmail.ch>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "linear_algebra_testcase"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
pygame = "^2.5.0"

[tool.poetry.scripts]
linear-algebra-testcase = "linear_algebra_testcase.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
